# gpligc

./: .gitignore  BUGS_ISSUES  CHECKLIST-RELEASE  ChangeLog  Makefile.am  README  TODO  TipsAndTricks  Todo  cleaner.sh  configure.ac  webinstall-dev.sh  webinstall-rel.sh
images/: Makefile.am
pdfdoc/: GPLIGC_Manual.tex  airspace.tex  bugs.tex  cleaner.sh  compileit.sh  copyfrompc12.sh  dem.tex  explorer.tex  explorer_cmdline.tex  explorer_config.tex  explorer_keys.tex  gpl.tex  gpligc.tex  gpligc_config.tex  gpligc_refs.bib  gpligcmanual.kilepr  install.tex  introduction.tex  logos.tex  maps.tex  mcinstall.tex  requirements.tex  resources.tex  tools.tex  tutor.tex  waypoints.tex  winstall.tex
pdfdoc/jpg/: logo-110.xcf
perl/: GPLIGC.pl  GPLIGCfunctions.pm  Makefile.am  gpsp2igc.pl  gpsp2igcfile.pl  loopviewer.pl  stitcherSRTM3.pl
src/: .ogierc  GLexplorer.cpp  GLexplorer.h  Makefile.am  airspc.cpp  airspc.h  cmdline.c  cmdline.ggo  cmdline.h  createworlddem.cpp  ego.cpp  ego.h  etopo1merger.cpp  etopo2merger.cpp  flightdata.cpp  flightdata.h  landscape.cpp  landscape.h  makecmdline.sh  map.cpp  map.h  merger.cpp  oconfig.cpp  oconfig.h  oglexfunc.cpp  oglexfunc.h  optimizer.cpp  points.cpp  points.h  projection.cpp  projection.h  value.h  write_jpeg.c
win/: README_windows.txt  install_windows.pl  makedist
